fix: Fixed instruction items gap styles and timer styles

--- a/source/src/pages/PayPage/ui/Instruction/InstructionItems.module.scss
+++ b/source/src/pages/PayPage/ui/Instruction/InstructionItems.module.scss
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     gap: 7px;
-    row-gap: 0;
 
     box-sizing: border-box;
     width: 100%;
