--- a/source/src/styles/styles.scss
+++ b/source/src/styles/styles.scss
@@ -323,10 +323,10 @@ button {
         display: inline-flex;
         gap: 8px;
         align-items: center;
-        width: 150px;
 
         .deadline-timer {
             width: 100px;
+            padding-right: 10px;
 
             font-size: 32px;
             font-weight: 600;
@@ -334,8 +334,17 @@ button {
             color: #37a8f3;
 
             @media (width <= 520px) {
+                width: 70px;
                 font-size: 22px;
             }
+        }
+
+        /* stylelint-disable-next-line no-descending-specificity */
+        img {
+            $width: 28px;
+
+            width: $width;
+            height: $width;
         }
 
         @media (width <= 520px) {
