--- a/source/src/widgets/PayHeader/ui/PayHeader.module.scss
+++ b/source/src/widgets/PayHeader/ui/PayHeader.module.scss
@@ -10,8 +10,6 @@
 
     .deadlineContainer {
         gap: 8px;
-        width: 150px;
-
         padding: 4px 10px;
         border-radius: 63px;
         background-color: #e7f5fe;
@@ -41,13 +39,10 @@
 }
 
 .deadlineTimer {
-    width: 100px;
-    min-width: 80px;
     font-size: 26px;
     line-height: 34px;
 
     @media (width <= 520px) {
-        min-width: 55px;
         font-size: 18px;
         line-height: 24px;
     }
